<resources>
    <string name="app_name">Data Handling</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="passwordtxt">Password</string>
    <string name="btnAll">Select All</string>
    <string name="add">Add</string>
    <string name="signin">Sign In</string>
    <string name="btnDelete">Delete</string>
    <string name="btnUpdate">Update</string>
</resources>